@@ -1,5 +1,17 @@
 <?php
 
+/**
+ * This file is part of the Zest Framework.
+ *
+ * @author   Malik Umer Farooq <lablnet01@gmail.com>
+ * @author-profile https://www.facebook.com/malikumerfarooq01/
+ *
+ * For the full copyright and license information, please view the LICENSE
+ *  file that was distributed with this source code.
+ *
+ * @license MIT
+ */
+
 namespace Zest\Validation;
 
 use Config\Database;
@@ -7,8 +19,19 @@ use Zest\Database\Db as DB;
 
 class databaseRules extends StickyRules
 {
+    /*
+     * Database table
+    */
     protected static $db_name = Database::DB_NAME;
-
+    /**
+     * Evaulate unique.
+     *
+     * @param $column Table column
+     *        $value Value to be checked
+     *        $table Database table  
+     *
+     * @return bool
+     */
     public function unique($column, $value, $table)
     {
         $db = new DB();
